--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>
       dukky
     </title>
@@ -10,8 +10,8 @@
     <h4>
       Press space!
     </h4>
-    <img src="dukk.gif" alt="dukk" class="center">
-    <embed src="hey_ya.mp3" loop="true" autostart="true" width="2" height="0">
+    <img src="images/dukk.gif" alt="dukk" class="center">
+    <embed src="sounds/hey_ya.mp3" loop="true" autostart="true" width="2" height="0">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script>
       let apiKey = 'd9e53816d07345139c58d0ea733e3870';
