--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
       Press space!
     </h4>
     <img src="images/dukk.gif" alt="dukk" class="center">
-    <embed src="sounds/hey_ya.mp3" loop="true" autostart="true" width="2" height="0">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script>
+      var audio = new Audio('sounds/hey_ya.mp3');
+      audio.play();
       let apiKey = 'd9e53816d07345139c58d0ea733e3870';
 $.getJSON('https://api.bigdatacloud.net/data/ip-geolocation?key=' + apiKey, function(data) {
   console.log(JSON.stringify(data, null, 2));
