--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <script>
       var audio = new Audio('sounds/hey_ya.mp3');
       audio.play();
-      $.getJSON('https://api.db-ip.com/v2/free/self', function(data) {
+      let apiKey = 'd9e53816d07345139c58d0ea733e3870';
+$.getJSON('https://api.bigdatacloud.net/data/ip-geolocation?key=' + apiKey, function(data) {
   console.log(JSON.stringify(data, null, 2));
-});
   document.body.onkeyup = function(e){
     if(e.keyCode == 32){
         document.write(JSON.stringify(data, null, 2));
